# Practice

SummerPractice/: CMakeLists.txt  main.cpp  tsp.cpp  tsp.h
TSP/: CMakeLists.txt  city.h  citydataparser.cpp  citydataparser.h  gui.cpp  gui.h  gui.ui  town.h  tsp.cpp  tsp.h
